Flare v1.15

Engine features:

* Add wander_radius and waypoints support for map NPCs
* Add scaling based on item level/player level/primary stats to several Item attributes, such as 'bonus' and 'price'.

Engine fixes:

* Fixed equipment not being visible on the load game menu in cases where an item is shared across multiple equipment sets.
* Fix potential crash in WidgetTabControl when trying to set an active tab when there is no tab already active.
* Fix unintended file appending when loading mod metadata
* Fix potential crash when tileset image can't be loaded.
* Fix bonuses to primary stats being incorrectly assigned when arbitrary resource stats are used.
* Fix leaked effect animations when an effect's animation property was redefined.
* Fix invalid memory access when consuming a corpse after a map change
* Fix crash when a book has a blank text item
* Fix memory leak from dropped loot
* Fix memory leak when a power's animation property was redefined.

Translation updates:

* Spanish (es) update (Jacobo Feijóo, Julvenzor, Eugenio Martínez Seguín)
* Scottish Gaelic (gd) update (GunChleoc)
* Korean (ko) update (ks k)
* Polish (pl) update (Marcin Serwin)
* Russian (ru) update (berry)
* Swedish (sv) update (Kevin Setterborn)



Flare v1.14 (https://flarerpg.org/2022/12/10/flare-1-14/)

Engine features:

* Added 'loot.requires_status' and 'status_loot' properties to loot table definitions.
* Support '/' as shorthand for 'exec' in the dev console. A space is not required after the slash.
* Added 'spawn_level' property to map enemies. This follows the same syntax as the Power property of the same name.
* Add XP scaling tables for scaling enemy reward XP based on enemy level.
* Replace 'immunity' effects with percentage-based resistances.
* Added 'mouse_move_deadzone' property to engine/misc.txt to help alleviate erratic mouse-move behavior when the cursor is near the player.
* Alternative tab UI for when tabs exceed the available space.