@@ -1078,6 +1078,8 @@ code {
 
 <p><strong>script</strong> | <code>filename</code> | Loads and executes a script file when the item is activated from the player's inventory.</p>
 
+<p><strong>loot_drops_max</strong> | <code>int</code> | The number of instances of this item that can drop during a single loot event.</p>
+
 <hr />
 
 <h4>ItemManager: Types</h4>
